Update offline message for better readability
Signed-off-by: Juan José Mata <juanjo.mata@gmail.com>

--- a/public/offline.html
+++ b/public/offline.html
@@ -98,7 +98,7 @@
   <div class="container">
     <img src="/logo-offline.svg" alt="Logo" class="logo">
 
-    <h1>We're experiencing technical difficulties</h1>
+    <h1>We're experiencing <br/> technical difficulties</h1>
     <p>It looks like you're offline or we can't reach our servers right now. Please check your connection and try again.</p>
 
     <button class="reload-button" onclick="window.location.reload()">
