--- a/public/offline.html
+++ b/public/offline.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#F9F9F9">
+  <meta name="theme-color" content="#1a1a1a" media="(prefers-color-scheme: dark)">
   <title>Offline - Maybe</title>
   <style>
     * {
